# tips

./: .gitignore  README.md
docs/: BUILDING.md  CONFIGURATION.md  EXTENDING.md
installer_framework/: LICENSE  README.md  pyproject.toml  tips-installer.spec
installer_framework/examples/: sample_installer.json  sample_installer_modern.json
installer_framework/examples/assets/: appicon.icns  copy_manifest.json  license.txt
installer_framework/examples/assets/payload/: README.txt
installer_framework/installer_framework/: __init__.py  main.py  uninstall_cli.py  uninstaller_main.py
installer_framework/installer_framework/app/: kivy_app.py  paths.py  qt_app.py  qt_uninstaller_app.py  resources.py
installer_framework/installer_framework/config/: conditions.py  loader.py  models.py  schema.json  validation.py
installer_framework/installer_framework/engine/: action_base.py  context.py  manifest.py  rollback.py  runner.py  uninstall_runner.py  upgrade.py  versioning.py
installer_framework/installer_framework/engine/actions/: copy_files.py  desktop_entry_linux.py  dotfile.py  registry.py  run_script.py  shortcut_windows.py  show_message.py
installer_framework/installer_framework/plugins/: __init__.py  discovery.py  models.py  registry.py  schema_compose.py
installer_framework/installer_framework/ui/: step_base.py  step_factory.py  theme.py  uninstall_wizard.py  wizard.py
installer_framework/installer_framework/ui/steps/: directory.py  finish.py  form.py  install.py  license.py  options.py  ready.py  scope.py  welcome.py
installer_framework/installer_framework/ui/widgets/: __init__.py  classic.py  classic_theme.py  dialogs.py  feature_list.py  log_pane.py  modern_theme.py  theme.py  validated_text_input.py
installer_framework/installer_framework/util/: fs.py  logging.py  platform.py  privileges.py  safe_eval.py
plugins/preflight_step.tipsplugin/: plugin.py  (+2 more)
tests/: conftest.py
(+93 files in other folders)
